[U]rename & multi-language. [P]export dataset format

--- a/docs/man/labelme.1
+++ b/docs/man/labelme.1
@@ -35,7 +35,7 @@ recognized as file, else as directory)
 .TP
 \fB\-\-config\fR CONFIG
 config file or yaml\-format string (default:
-/Users/wkentaro/.labelmerc)
+/Users/codebaragi23/.labelmerc)
 .TP
 \fB\-\-nodata\fR
 stop storing image data to JSON file
